<resources>
    <string name="app_name">Movie Catalogue</string>

    <string name="my_movie_and_tv_show">My Movie and Tv Show</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="poster">Poster</string>
    <string name="rating">Rating</string>
    <string name="genres">Genres</string>
    <string name="duration">Duration</string>
    <string name="overview">Overview</string>
    <string name="movies">Movies</string>
    <string name="tvshows">Tv Shows</string>
    <string name="episodes">Episodes</string>
    <string name="share_movie">https://www.themoviedb.org/movie/%s</string>
    <string name="share_tv">https://www.themoviedb.org/tv/%s</string>
    <string name="movie_and_tv_show">Movie and Tv Show</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite_movie">Favorite Movie</string>
    <string name="favorite_tv_show">Favorite Tv Show</string>
    <string name="list_favorite">List Favorite</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_notifications">Notifications</string>
    <string name="favorite_is_empty">Favorite is empty</string>

</resources>